testsuite/tests/polykinds/T16263.stderr

T16263.hs:7:1: error:
    • Illegal constraint in a kind: Eq a => *
    • In the data type declaration for ‘Q’
